--- a/buildspec.yml
+++ b/buildspec.yml
@@ -24,4 +24,5 @@ phases:
       - echo Writing image definitions file...
       - printf '[{"name":"%s","imageUri":"%s"}]' $CONTAINER_NAME $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
 artifacts:
-    files: imagedefinitions.json
+    files:
+      - 'Dockerrun.aws.json'
